docs/api/qiskit/0.19/qiskit.qobj.QasmQobjExperiment.mdx
---
title: QasmQobjExperiment (v0.19)
description: API reference for qiskit.qobj.QasmQobjExperiment in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QasmQobjExperiment
---

# QasmQobjExperiment

<Class id="qiskit.qobj.QasmQobjExperiment" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/qobj/qasm_qobj.py" signature="QasmQobjExperiment(config=None, header=None, instructions=None)" modifiers="class">
  A QASM Qobj Experiment.

  Each instance of this class is used to represent a QASM experiment as part of a larger QASM qobj.

  Instatiate a QasmQobjExperiment.

  **Parameters**

  *   **config** ([*QasmQobjExperimentConfig*](qiskit.qobj.QasmQobjExperimentConfig "qiskit.qobj.QasmQobjExperimentConfig")) – A config object for the experiment
  *   **header** (*QasmQobjExperimentHeader*) – A header object for the experiment
  *   **instructions** (*list*) – A list of [`QasmQobjInstruction`](qiskit.qobj.QasmQobjInstruction "qiskit.qobj.QasmQobjInstruction") objects

  ## Methods

  <span id="qasmqobjexperiment-from-dict" />

  ### from\_dict

  <Function id="qiskit.qobj.QasmQobjExperiment.from_dict" signature="QasmQobjExperiment.from_dict(data)" modifiers="classmethod">
    Create a new QasmQobjExperiment object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [QasmQobjExperiment](qiskit.qobj.QasmQobjExperiment "qiskit.qobj.QasmQobjExperiment")
  </Function>

  <span id="qasmqobjexperiment-to-dict" />

  ### to\_dict

  <Function id="qiskit.qobj.QasmQobjExperiment.to_dict" signature="QasmQobjExperiment.to_dict()">
    Return a dictionary format representation of the Experiment.

    **Returns**

    The dictionary form of the QasmQObjExperiment.

    **Return type**

    dict
  </Function>
</Class>

