docs/api/qiskit/1.2/qiskit.qobj.QasmQobjExperiment.mdx
---
title: QasmQobjExperiment (v1.2)
description: API reference for qiskit.qobj.QasmQobjExperiment in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.QasmQobjExperiment
---

# QasmQobjExperiment

<Class id="qiskit.qobj.QasmQobjExperiment" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L205-L290" signature="qiskit.qobj.QasmQobjExperiment(config=None, header=None, instructions=None)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  An OpenQASM 2 Qobj Experiment.

  Each instance of this class is used to represent an OpenQASM 2 experiment as part of a larger OpenQASM 2 qobj.

  Instantiate a QasmQobjExperiment.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.qasm_qobj.QasmQobjExperiment` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **config** ([*QasmQobjExperimentConfig*](qiskit.qobj.QasmQobjExperimentConfig "qiskit.qobj.QasmQobjExperimentConfig")) – A config object for the experiment
  *   **header** (*QasmQobjExperimentHeader*) – A header object for the experiment
  *   **instructions** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – A list of [`QasmQobjInstruction`](qiskit.qobj.QasmQobjInstruction "qiskit.qobj.QasmQobjInstruction") objects

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.QasmQobjExperiment.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L263-L284" signature="from_dict(data)" modifiers="classmethod">
    Create a new QasmQobjExperiment object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary for the experiment config

    **Returns**

    The object from the input dictionary.

    **Return type**

    [QasmQobjExperiment](#qiskit.qobj.QasmQobjExperiment "qiskit.qobj.QasmQobjExperiment")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.QasmQobjExperiment.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/qasm_qobj.py#L250-L261" signature="to_dict()">
    Return a dictionary format representation of the Experiment.

    **Returns**

    The dictionary form of the QasmQObjExperiment.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

